tests/js_error/source_locations/expression/delete/delete_binding.exp
Error: 
  at has (tests/js_error/source_locations/expression/delete/delete_binding.js:5:13)
  at <global> (tests/js_error/source_locations/expression/delete/delete_binding.js:11:3)
